tests/snapshots/errors/struct_missing_field.mc
struct Point {
    x: int,
    y: int
}
let p = Point { x: 10 };
